infra/cfn/securitygroup.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  ProjectName:
    Type: String
  Environment:
    Type: String
  VPC:
    Type: String

Resources:
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security Group para Lambda Functions'
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
          Description: 'HTTPS para AWS Services'
        
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-${Environment}-lambda-sg'


  CacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Security Group para ElastiCache'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref LambdaSecurityGroup
          Description: 'Access from Lambda'
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-${Environment}-cache-sg'
    DependsOn:
      - LambdaSecurityGroup


  LambdaSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: tcp
      FromPort: 6379
      ToPort: 6379
      DestinationSecurityGroupId: !Ref CacheSecurityGroup
      Description: 'Redis Access'
    DependsOn: 
      - CacheSecurityGroup

Outputs:
  LambdaSecurityGroup:
    Value: !Ref LambdaSecurityGroup

  CacheSecurityGroup:
    Value: !Ref CacheSecurityGroup
